# efficom-framework-back-planning

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: database.py  main.py
app/internal/: auth.py
app/models/: activities.py  companies.py  plannings.py  users.py
app/routers/: activities.py  companies.py  plannings.py  users.py
