[tool.poetry]
name = "Efficom School project 2024"
version = "0.1.0"
readme = "README.md"
description = "A project showcasing a small and representative app"
authors = ["Customs Bridge <contact@customsbridge.fr>"]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
fastapi = "0.110.0"
pymongo = "4.6.2"
flask = "3.0.2"
flask-security = "3.0.0"
flask-sqlalchemy = "3.1.1"
python-jose = {extras = ["cryptography"], version = "3.3.0"}
pydantic = {extras = ["email"], version = "2.6.3"}
python-multipart = "0.0.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core=1.1.12"]
build-backend = "poetry.core.masonry.api"